--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <a href="/">
+                <a href="index.html">
                     <img src="logo.png" alt="Sarah M Projects Logo" class="logo-image">
                     <div class="logo-text">
                         <h1>Sarah M Projects</h1>
@@ -26,7 +26,7 @@
             </button>
             <nav>
                 <ul id="navMenu">
-                    <li><a href="/" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -108,7 +108,6 @@
                     </div>
                     <a href="about.html" class="btn">Our Story</a>
                 </div>
-                <!-- Removed the Industrial Excellence placeholder block -->
             </div>
         </div>
     </section>
@@ -166,7 +165,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2026 Sarah M Projects. All rights reserved.</p>
+                <p>&copy; <span id="currentYear">2026</span> Sarah M Projects. All rights reserved.</p>
             </div>
         </div>
     </footer>
