--- a/contact.html
+++ b/contact.html
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2026 Sarah M Projects. All rights reserved.</p>
+                <p>&copy; <span id="currentYear">2026</span> Sarah M Projects. All rights reserved.</p>
             </div>
         </div>
     </footer>
