--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
                     <div class="contact-info">
                         <p><i class="fas fa-map-marker-alt"></i> South Africa</p>
                         <p><i class="fas fa-phone"></i> 067 403 1185</p>
-                        <p><i class="fas fa-envelope"></i> ntokozomaboa0209@gmail.com</p>
-                        <p><i class="fas fa-envelope"></i> ntokozomaboa9@icloud.com</p>
+                        <p><i class="fas fa-envelope"></i> sarahmprojects.inquiries@gmail.com</p>
                     </div>
                 </div>
             </div>
